test/bad/check/EscapeData.hs
module EscapeData where

escape = Data where
  data Data = Data